--- a/.gitignore
+++ b/.gitignore
@@ -86,7 +86,7 @@ dist/macos/markdown-pdf
 dist/macos/npe
 
 dist/win32/node_modules
-dist/win32/markdown-pdf
+dist/win32/utils/
 dist/win32/notion-pdf-exporter.exe
 
 # Gatsby files
