Fix Creash when Asset not found

--- a/.gitignore
+++ b/.gitignore
@@ -85,10 +85,12 @@ dist/macos/node_modules
 dist/macos/markdown-pdf
 dist/macos/npe
 dist/macos/utils
+dist/macos/pdfs
 
 dist/win32/node_modules
 dist/win32/utils/
 dist/win32/notion-pdf-exporter.exe
+dist/win32/pdfs
 
 # Gatsby files
 .cache/
